--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
 greenlet==3.0.3
+idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 regex==2024.7.24
+requests==2.32.3
 SQLAlchemy==2.0.32
 typing_extensions==4.12.2
+urllib3==2.2.2
 Werkzeug==3.0.3
